--- a/bootstrap-4.4.1-dist/css/bootstrap.css
+++ b/bootstrap-4.4.1-dist/css/bootstrap.css
@@ -479,7 +479,7 @@ mark,
 
 .img-thumbnail {
   padding: 0.25rem;
-  background-color: #fff;
+  background-color: #000000;
   border: 1px solid #dee2e6;
   border-radius: 0.25rem;
   max-width: 100%;
@@ -4397,8 +4397,8 @@ input[type="button"].btn-block {
   padding: 0.25rem 0.75rem;
   font-size: 1.25rem;
   line-height: 1;
-  background-color: transparent;
-  border: 1px solid transparent;
+  background-color: rgb(223, 230, 252);
+  border: 1px;
   border-radius: 0.25rem;
 }
 
@@ -9940,6 +9940,7 @@ button.bg-dark:focus {
 
 .text-right {
   text-align: right !important;
+  margin: 8px;
 }
 
 .text-center {
