correct html and css, add functions

--- a/templates/data.html
+++ b/templates/data.html
@@ -80,8 +80,8 @@
                         <label data-error="wrong" data-success="right" for="">article_id</label>
                         <input type="text" id="" class="form-control validate">
 
-                        <label data-error="wrong" data-success="right" for="">user_name</label>
-                        <input type="text" id="" class="form-control validate">
+                        <!-- <label data-error="wrong" data-success="right" for="">user_name</label>
+                        <input type="text" id="" class="form-control validate"> -->
 
                     </div>
                 </div>
@@ -147,7 +147,7 @@
 
     <div class="container">
             <div class="text-right" style="font-size: 2rem;">
-                <a href="" data-toggle="modal" data-target="#searchDataForm"><i class="fa fa-search"></i></a>
+                <a href="" data-toggle="modal" data-target="#searchDataForm"><i class="fa fa-search mx-3"></i></a>
                 <a href="" data-toggle="modal" data-target="#addDataForm"><i class="fa fa-plus lg"></i></a>
             </div>
 
