--- a/templates/data.html
+++ b/templates/data.html
@@ -33,7 +33,7 @@
                 </li>
             </ul>
 
-            <p class="ml-auto small">Connecté en tant que ThomasMikolov</p>
+            <p class="ml-auto small">Connecté en tant que {{ username }}</p>
             <a class="ml-auto navbar-text" href="#">Déconnexion</a>
         </div>
     </nav>
@@ -94,8 +94,10 @@
     </div>
 
     <!-- add data hidden popup-->
+
     <div class="modal fade" id="addDataForm" tabindex="-1" role="dialog" aria-labelledby="addDataForm"
         aria-hidden="true">
+        <form method="POST">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header text-center">
@@ -107,42 +109,49 @@
                 <div class="modal-body mx-3">
                     <div class="md-form mb-5">
                         <label data-error="wrong" data-success="right" for="">article_id</label>
-                        <input type="text" id="" class="form-control validate">
+                        <input type="text" name="article_id" id="article_id" class="form-control validate">
 
                         <label data-error="wrong" data-success="right" for="">contrib_data</label>
-                        <input type="text" id="" class="form-control validate">
+                        <input type="text" name="contrib_data" id="contrib_data" class="form-control validate">
 
                         <label data-error="wrong" data-success="right" for="">contrib_name</label>
-                        <input type="text" id="" class="form-control validate">
+                        <input type="text" name="contrib_name" id="contrib_name" class="form-control validate">
 
                         <label data-error="wrong" data-success="right" for="">contrib_path</label>
-                        <input type="text" id="" class="form-control validate">
+                        <input type="text" name="contrib_path" id="contrib_path" class="form-control validate">
+
+                        <label data-error="wrong" data-success="right" for="">contrib_type</label>
+                        <input type="text" name="contrib_type" id="contrib_type" class="form-control validate">
+
+                        <label data-error="wrong" data-success="right" for="">dico_id</label>
+                        <input type="text" name="dico_id" id="dico_id" class="form-control validate">
 
                         <label data-error="wrong" data-success="right" for="">last_update</label>
-                        <input type="text" id="" class="form-control validate">
+                        <input type="text" name="last_update" id="last_update" class="form-control validate">
 
                         <label data-error="wrong" data-success="right" for="">ntealan</label>
-                        <input type="text" id="" class="form-control validate">
-
-                        <label data-error="wrong" data-success="right" for="">article_id</label>
-                        <input type="text" id="" class="form-control validate">
+                        <input type="text" name="ntealan" id="ntealan" class="form-control validate">
 
                         <label data-error="wrong" data-success="right" for="">public_id</label>
-                        <input type="text" id="" class="form-control validate">
+                        <input type="text" name="public_id" id="public_id" class="form-control validate">
+
+                        <label data-error="wrong" data-success="right" for="">user_id</label>
+                        <input type="text" name="user_id" id="user_id" class="form-control validate">
 
                         <label data-error="wrong" data-success="right" for="">user_name</label>
-                        <input type="text" id="" class="form-control validate">
+                        <input type="text" name="user_name" id="user_name" class="form-control validate">
 
                         <label data-error="wrong" data-success="right" for="">validate</label>
-                        <input type="text" id="" class="form-control validate">
+                        <input type="text" name="validate" id="validate" class="form-control validate">
                     </div>
                 </div>
 
                 <div class="modal-footer d-flex justify-content-center">
-                    <button class="btn btn-primary">Ajouter</button>
+                    <button type="submit" class="btn btn-primary">Ajouter</button>
                 </div>
             </div>
         </div>
+    </form>
     </div>
 
     <div class="container">
@@ -151,11 +160,16 @@
                 <a href="" data-toggle="modal" data-target="#addDataForm"><i class="fa fa-plus lg"></i></a>
             </div>
 
+
+
+        {% for d in data %}
         <!-- Modify data -->
         <section class="row border small mb-3">
 
             <div class="container">
 
+                
+                    
                 <div class="align-items-left justify-content-left table-responsive col-12">
                     <table class="table table-bordered table-striped my-3">
                         <thead>
@@ -165,49 +179,18 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>article_id</td>
-                                <td>d865db16-93fc-4025-936c-ef4f7a01e454</td>
-                            </tr>
-                            <tr>
-                                <td>contrib_data</td>
-                                <td>mba-d865db16-93fc-4025-936c-ef4f7a01e454_1-2019-09-05T075035.034Z-.wav</td>
-                            </tr>
-                            <tr>
-                                <td>contrib_name</td>
-                                <td>https://ntealan.net/soundcontrib/</td>
-                            </tr>
-                            <tr>
-                                <td>contrib_path</td>
-                                <td>sound</td>
-                            </tr>
-                            <tr>
-                                <td>last_update</td>
-                                <td>yb_fr_3031</td>
-                            </tr>
-                            <tr>
-                                <td>ntealan</td>
-                                <td>true</td>
-                            </tr>
-                            <tr>
-                                <td>public_id</td>
-                                <td>8ad93a62-9437-416f-93c6-948a2c15b45b</td>
-                            </tr>
-                            <tr>
-                                <td>user_id</td>
-                                <td>b42e96a8-7b0b-8b45-ae69-7c2efd472e1d</td>
-                            </tr>
-                            <tr>
-                                <td>user_name</td>
-                                <td>Bergier</td>
-                            </tr>
-                            <tr>
-                                <td>validate</td>
-                                <td>false</td>
-                            </tr>
+
+                            {% for key, values in d.items() %}
+                                <tr>
+                                    <td>{{key}}</td>
+                                    <td>{{values}}</td>
+                                </tr>
+                            {% endfor %}
+
                         </tbody>
                     </table>
                 </div>
+
 
                 <div class="align-items-right justify-content-right small my-3 mx-3 float-right">
                     <div class="float-right">
@@ -220,7 +203,7 @@
 
         </section>
 
-
+        {% endfor %}
 
         <div class="modal fade" id="modalEdit" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
             aria-hidden="true">
@@ -278,76 +261,7 @@
             </div>
         </div>
 
-        <section class="row border small my-3">
-
-            <div class="container">
-
-                <div class="align-items-left justify-content-left table-responsive col-12">
-                    <table class="table table-bordered table-striped my-3">
-                        <thead>
-                            <tr>
-                                <th>Nom</th>
-                                <th>Valeur</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>article_id</td>
-                                <td>d865db16-93fc-4025-936c-ef4f7a01e454</td>
-                            </tr>
-                            <tr>
-                                <td>contrib_data</td>
-                                <td>mba-d865db16-93fc-4025-936c-ef4f7a01e454_1-2019-09-05T075035.034Z-.wav</td>
-                            </tr>
-                            <tr>
-                                <td>contrib_name</td>
-                                <td>https://ntealan.net/soundcontrib/</td>
-                            </tr>
-                            <tr>
-                                <td>contrib_path</td>
-                                <td>sound</td>
-                            </tr>
-                            <tr>
-                                <td>last_update</td>
-                                <td>yb_fr_3031</td>
-                            </tr>
-                            <tr>
-                                <td>ntealan</td>
-                                <td>true</td>
-                            </tr>
-                            <tr>
-                                <td>public_id</td>
-                                <td>8ad93a62-9437-416f-93c6-948a2c15b45b</td>
-                            </tr>
-                            <tr>
-                                <td>user_id</td>
-                                <td>b42e96a8-7b0b-8b45-ae69-7c2efd472e1d</td>
-                            </tr>
-                            <tr>
-                                <td>user_name</td>
-                                <td>Bergier</td>
-                            </tr>
-                            <tr>
-                                <td>validate</td>
-                                <td>false</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-                <div class="align-items-right justify-content-right small my-3 mx-3 float-right">
-                    <div class="float-right">
-                        <button class="btn btn-primary">Modifier</button>
-                        <a href="#modalDelete" role="button" class="btn btn-danger" data-toggle="modal">Supprimer</a>
-                    </div>
-
-                </div>
-
-            </div>
-
-        </section>
-
-
+        
 
     </div>
 
