--- a/templates/licence.html
+++ b/templates/licence.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Mentions légales</title>
-    <meta name="description" content="page de connexion" />
+    <meta name="description" content="page de mentions légales" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
@@ -23,14 +23,14 @@
         <div class="navbar-collapse collapse" id="navbar">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#" style="color:blue;">Données</a>
+                    <a class="nav-link" href="{{ url_for('data') }}">Données</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Mentions légales</a>
+                    <a class="nav-link" href="#" style="color:blue;">Mentions légales</a>
                 </li>
             </ul>
 
-            <p class="ml-auto small">Connecté en tant que {{username}}</p>
+            <p class="ml-auto small">Connecté en tant que {{current_user}}</p>
             <a class="ml-auto navbar-text" href="#">Déconnexion</a>
         </div>
     </nav>
