--- a/templates/data.html
+++ b/templates/data.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Data</title>
+    <title>Ceptyconsultant</title>
     <meta name="description" content="page de connexion" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -22,18 +22,18 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a href="/" class="navbar-brand">Ceptyconsultant</a>
+        <a href="{{ url_for('data') }}" class="navbar-brand">Ceptyconsultant</a>
         <div class="navbar-collapse collapse" id="navbar">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#" style="color:blue;">Données</a>
+                    <a class="nav-link" href="{{ url_for('data') }}" style="color:blue;">Données</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('licence') }}">Mentions légales</a>
                 </li>
             </ul>
 
-            <p class="ml-auto small">Connecté en tant que {{ current_user }}</p>
+
             <a href="{{ url_for('login') }}" class="ml-auto navbar-text" href="#">Déconnexion</a>
         </div>
     </nav>
