--- a/templates/response.html
+++ b/templates/response.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-        <title>Page Not Found</title>
+        <title>Ceptyconsultant</title>
         <meta name="description" content="page not found"/>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -39,8 +39,8 @@
     <!-- fin nav -->
     
     <div class="container">
-
-            <h3 class="text-center pt-5">404 - Page Not Found</h3>
-            </div>
+        <div class="alert alert-{{ alert }}" role="alert">{{ message }}</div>
+        <a href="{{ url_for('data') }}" class="ml-auto navbar-text" href="#"><< Revenir aux donnée</a>
+    </div>
     </body>
 </html>
