--- a/templates/license.html
+++ b/templates/license.html
@@ -1,41 +1,7 @@
-<!DOCTYPE html>
-<html>
+{% extends "base.html" %}
 
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Mentions légales</title>
-    <meta name="description" content="page de mentions légales" />
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link href="/static/css/bootstrap.css" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-</head>
-<body>
-    <nav class="navbar navbar-inverse navbar-light navbar-expand-sm navbar-custom mb-5" style=" 
-        -webkit-box-shadow: 0px 4px 9px 1px rgba(143, 143, 143, 0.5);
-        -moz-box-shadow: 0px 4px 9px 1px rgba(143, 143, 143, 0.5);
-        box-shadow: 0px 4px 9px 1px rgba(143, 143, 143, 0.5);">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <a href="/" class="navbar-brand">Ceptyconsultant</a>
-        <div class="navbar-collapse collapse" id="navbar">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('data') }}">Données</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('licence') }}" style="color:blue;">Mentions légales</a>
-                </li>
-            </ul>
 
-            <p class="ml-auto small">Connecté en tant que {{current_user}}</p>
-            <a class="ml-auto navbar-text" href="{{ url_for('login') }}">Déconnexion</a>
-        </div>
-    </nav>
-    <!-- fin nav -->
-    <!-- Mention légales-->
+{% block content %}
     <div class="container">
 
         <div class="align-items-left justify-content-left table-responsive col-12">
@@ -52,6 +18,17 @@
                     <tr>
                         <th>
                         <p>Copyright 2020 Ceptyconsultant Inalco </p>
+                        <p>Cette application est sous licence MIT :</p>
+                        <p>
+                            Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"),
+                            to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software,
+                            and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+                            The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+                        </p>
+                        <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
+                            IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+                            OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+                        </p>
                         </th>
                     </tr>
                     <tr>
@@ -105,4 +82,6 @@
             </table>
         </div>
 
-</body>
+        </div>
+
+{% endblock %}
