--- a/templates/login.html
+++ b/templates/login.html
@@ -40,4 +40,15 @@
             </div>
         </div>
     </body>
+
+    <!-- Footer -->
+<footer class="page-footer font-small blue">
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright: MIT Ceptyconsultant</a>
+    </div>
+    <!-- Copyright -->
+  
+</footer>
+<!-- Footer -->
 </html>
