--- a/templates/response.html
+++ b/templates/response.html
@@ -1,46 +1,9 @@
-<!DOCTYPE html>
-<html>
+{% extends "base.html" %}
 
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-        <title>Ceptyconsultant</title>
-        <meta name="description" content="page not found"/>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <!-- Bootstrap CSS -->
-        <link href="/static/css/bootstrap.css" rel="stylesheet">
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    </head>
-
-    <body>
-    <nav class="navbar navbar-inverse navbar-light navbar-expand-sm navbar-custom mb-5" style=" 
-        -webkit-box-shadow: 0px 4px 9px 1px rgba(143, 143, 143, 0.5);
-        -moz-box-shadow: 0px 4px 9px 1px rgba(143, 143, 143, 0.5);
-        box-shadow: 0px 4px 9px 1px rgba(143, 143, 143, 0.5);">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <a href="/" class="navbar-brand">Ceptyconsultant</a>
-        <div class="navbar-collapse collapse" id="navbar">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('data') }}">Données</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#" style="color:blue;">Mentions légales</a>
-                </li>
-            </ul>
-
-            <p class="ml-auto small">Connecté en tant que {{current_user}}</p>
-            <a class="ml-auto navbar-text" href="#">Déconnexion</a>
-        </div>
-    </nav>
-    <!-- fin nav -->
-    
+{% block content %}
     <div class="container">
         <div class="alert alert-{{ alert }}" role="alert">{{ message }}</div>
-        <a href="{{ url_for('data') }}" class="ml-auto navbar-text" href="#"><< Revenir aux donnée</a>
+        <a href="{{ url_for('login') }}" class="btn btn-primary"><< Revenir aux données</a>
     </div>
-    </body>
-</html>
+
+{% endblock %}
