add login error page

--- a/templates/login_error.html
+++ b/templates/login_error.html
@@ -1,8 +1,19 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Ceptyconsultant</title>
+    <meta name="description" content="page de connexion" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="/static/css/bootstrap.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+</head>
 
-
-
-<div class="container" left-right>   
-    <div>Vous n'êtes pas connecté</div>
-    <a href="{{ url_for('login') }}"><< Connection</a>
-</div>
+<body>
+    <div class="container" left-right>   
+        <h2 style="text-align: center"> Vous n'êtes pas connecté</h2>
+        <a href="{{ url_for('login') }}" style="margin: 0 auto; display:block; text-align: center" ><< Connection</a>
+    </div>
+</body>
