correct type error

--- a/templates/license.html
+++ b/templates/license.html
@@ -13,7 +13,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th>licence</th>
+                        <th>Licence</th>
                     </tr>
                     <tr>
                         <th>
