--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-        <title>Connexion</title>
+        <title>Ceptyconsultant</title>
         <meta name="description" content="page de connexion"/>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,19 +15,19 @@
 
     <body>
         <div id="login">
-            <h3 class="text-center text-white pt-5">Login form</h3>
+            <h3 class="text-center text-white pt-5">Connection</h3>
             <div class="container">
                 <div id="login-row" class="row justify-content-center align-items-center">
                     <div id="login-column" class="col-md-6">
                         <div id="login-box" class="col-md-12">
                             <form id="login-form" class="form" action="" method="post">
-                                <h3 class="text-center text-info">Login to Ceptyconsultant</h3>
+                                <h3 class="text-center text-info">Se connecter n à Ceptyconsultant</h3>
                                 <div class="form-group">
-                                    <label for="username" class="text-info">Username:</label><br>
+                                    <label for="username" class="text-info">Identifiant:</label><br>
                                     <input type="text" name="username" id="username" class="form-control">
                                 </div>
                                 <div class="form-group">
-                                    <label for="password" class="text-info">Password:</label><br>
+                                    <label for="password" class="text-info">Mot de passe:</label><br>
                                     <input type="password" name="password" id="password" class="form-control">
                                 </div>
                                 <div class="form-group">
