--- a/templates/data.html
+++ b/templates/data.html
@@ -196,7 +196,7 @@ aria-hidden="true">
                 <input type="text" name="user_id" id="user_id" class="form-control validate" value="{{d.user_id}}">
 
                 <label data-error="wrong" data-success="right" for="">user_name</label>
-                <input type="text" name="user_name" id="user_name" class="form-control validate" value="{{current_user}}" readonly>
+                <input type="text" name="user_name" id="user_name" class="form-control validate" value="{{d.user_name}}">
 
                 <label data-error="wrong" data-success="right" for="">validate</label>
                 <input type="text" name="validate" id="validate" class="form-control validate" value="{{d.validate}}">
