--- a/templates/response.html
+++ b/templates/response.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="container">
         <div class="alert alert-{{ alert }}" role="alert">{{ message }}</div>
-        <a href="{{ url_for('login') }}" class="btn btn-primary"><< Revenir aux données</a>
+        <a href="{{ url_for('data') }}" class="btn btn-primary"><< Revenir aux données</a>
     </div>
 
 {% endblock %}
