fix template form

--- a/templates/data.html
+++ b/templates/data.html
@@ -57,7 +57,7 @@ aria-hidden="true">
         <div class="modal-body mx-3">
             <div class="md-form mb-5">
                 <label data-error="wrong" data-success="right" for="">article_id</label>
-                <input type="text" name="article_id" id="article_id" class="form-control validate">
+                <input type="text" name="article_id" id="article_id" class="form-control validate" required pattern="[0-9a-zA-Z-]+">
 
                 <label data-error="wrong" data-success="right" for="">contrib_data</label>
                 <input type="text" name="contrib_data" id="contrib_data" class="form-control validate">
