--- a/templates/login.html
+++ b/templates/login.html
@@ -14,13 +14,13 @@
     </head>
 
     <body>
-        <div id="login">
+        <div id="login" class="my-5">
             <div class="container">
                 <div id="login-row" class="row justify-content-center align-items-center">
                     <div id="login-column" class="col-md-6">
                         <div id="login-box" class="col-md-12">
                             <form id="login-form" class="form" action="" method="post">
-                                <h3 class="text-center text-info">Connection à Ceptyconsultant</h3>
+                                <h3 class="text-center text-info my-5">Connection à Ceptyconsultant</h3>
                                 <div class="form-group">
                                     <label for="username" class="text-info">Identifiant:</label><br>
                                     <input type="text" name="username" id="username" class="form-control">
